# frostydupy

./: .README.md  Cargo.toml  LICENSE  main.js  package.json  pnpm-lock.yaml  style.css  vite.config.ts  wallet_approval.html
.github/workflows/: rust_server.yml
gui/: Cargo.toml
gui/src/: main.rs
src/: storage.js  utils_dom.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/btc/: commands.rs  mod.rs
src-tauri/src/btc/wallet/: config.rs  mod.rs
wallet/: Cargo.toml
wallet/src/: lib.rs
