[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "1.0.0-alpha.2", features = ["bip39"] }
bdk_chain = { version = "0.6.0", features = ["miniscript", "serde"] }
bitcoin = "0.30.1"
serde = { version = "1.0.190", features = ["derive"] }
